[package]
name = "status-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "net", "signal", "fs"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["timeout", "cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
sysinfo = "0.30"
byte-unit = "5.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.8", features = ["time_0_3"] }
serde_json = "1.0"
reqwest = "0.12"
dotenvy_macro = "0.15"
toml = "0.8"
anyhow = "1.0"
